--- a/RTSViewer/Info-iOS.plist
+++ b/RTSViewer/Info-iOS.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Camera access must be allowed for publishing video.</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Microphone access must be allowed for publishing audio.</string>
 	<key>UIApplicationSceneManifest</key>
