--- a/RTSViewer/Info-iOS.plist
+++ b/RTSViewer/Info-iOS.plist
@@ -16,6 +16,21 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Roboto-Black</string>
+		<string>Roboto-BlackItalic</string>
+		<string>Roboto-Bold</string>
+		<string>Roboto-BoldItalic</string>
+		<string>Roboto-Italic</string>
+		<string>Roboto-Light</string>
+		<string>Roboto-LightItalic</string>
+		<string>Roboto-Medium</string>
+		<string>Roboto-MediumItalic</string>
+		<string>Roboto-Regular</string>
+		<string>Roboto-Thin</string>
+		<string>Roboto-ThinItalic</string>
+	</array>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
