Update code signing settings to exclude dependent packages from signing

--- a/Configuration/iOSDebugSettings.xcconfig
+++ b/Configuration/iOSDebugSettings.xcconfig
@@ -1,5 +1,9 @@
 PRODUCT_BUNDLE_IDENTIFIER = io.dolby.rts.ios-viewer-staging
 
+EXPANDED_CODE_SIGN_IDENTITY = ''
+CODE_SIGNING_REQUIRED = NO
+CODE_SIGNING_ALLOWED = NO
+
 DEVELOPMENT_TEAM = E4A6TDH44W
 CODE_SIGN_STYLE = Manual
 CODE_SIGN_IDENTITY = iPhone Developer
