--- a/fastlane/.env.ios-appstore
+++ b/fastlane/.env.ios-appstore
@@ -1,10 +1,10 @@
 // .env.appstore
-PLATFORM = appletvos
+PLATFORM = ios
 
 GYM_CONFIGURATION = "Release"
 GYM_WORKSPACE = "RTSViewer.xcworkspace"
-GYM_SCHEME = "RTSViewer TVOS"
+GYM_SCHEME = "RTSViewer iOS"
 GYM_OUTPUT_DIR = "Tmp/build/"
 GYM_BUILD_PATH = "Tmp/build/"
-GYM_DESTINATION = "generic/platform=tvOS"
+GYM_DESTINATION = "generic/platform=iOS"
 GYM_EXPORT_METHOD = "app-store"
