--- a/RTSViewer.xcodeproj/xcshareddata/xcschemes/RTSViewerTVOSTests.xcscheme
+++ b/RTSViewer.xcodeproj/xcshareddata/xcschemes/RTSViewerTVOSTests.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E8752B5E298CA4C4002D5C2B"
+               BuildableName = "RTSViewerTVOSTests.xctest"
+               BlueprintName = "RTSViewerTVOSTests"
+               ReferencedContainer = "container:RTSViewer.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -18,8 +34,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E8752B5E298CA4C4002D5C2B"
-               BuildableName = "RTSViewer TVOSTests.xctest"
-               BlueprintName = "RTSViewer TVOSTests"
+               BuildableName = "RTSViewerTVOSTests.xctest"
+               BlueprintName = "RTSViewerTVOSTests"
                ReferencedContainer = "container:RTSViewer.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,6 +58,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "E8752B5E298CA4C4002D5C2B"
+            BuildableName = "RTSViewerTVOSTests.xctest"
+            BlueprintName = "RTSViewerTVOSTests"
+            ReferencedContainer = "container:RTSViewer.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
