--- a/RTSViewer/iOS/Info.plist
+++ b/RTSViewer/iOS/Info.plist
@@ -20,12 +20,12 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Camera access must be allowed for publishing video.</string>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Microphone access must be allowed for publishing audio.</string>
 	<key>UIApplicationSceneManifest</key>
@@ -41,6 +41,8 @@
 	</array>
 	<key>UILaunchScreen</key>
 	<dict/>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
