--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,13 +3,13 @@ name: RTS Viewer Build and Distribution
 on:
   push:
     branches:
-      - main
+      - feature/upgrade-to-xcode-14.3
     tags:
       - '*'
 
 jobs:
   Build-And-Deploy-TVOS-App-To-Appstore:
-    runs-on: macos-12
+    runs-on: macos-latest
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
@@ -36,7 +36,7 @@ jobs:
           bundle exec fastlane build_and_deploy_to_appstore --env tvos-appstore build_number:$GITHUB_RUN_NUMBER
 
   Build-And-Deploy-iOS-App-To-Appstore:
-    runs-on: macos-12
+    runs-on: macos-latest
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
