--- a/Configuration/InteractiveVieweriOSDebugSettings.xcconfig
+++ b/Configuration/InteractiveVieweriOSDebugSettings.xcconfig
@@ -1,7 +1,7 @@
 PRODUCT_BUNDLE_IDENTIFIER = io.dolby.ios-interactive-player-staging
 
-DEVELOPMENT_TEAM = B5PH3RUUX8
+DEVELOPMENT_TEAM = E4A6TDH44W
 CODE_SIGN_STYLE = Manual
-CODE_SIGN_IDENTITY = iPhone Distribution
+CODE_SIGN_IDENTITY = iPhone Developer
 
-PROVISIONING_PROFILE_SPECIFIER = Dolby IO iOS RTS Viewer Development
+PROVISIONING_PROFILE_SPECIFIER = Dolby IO iOS Interactive Player Development
