--- a/Configuration/InteractiveVieweriOSReleaseSettings.xcconfig
+++ b/Configuration/InteractiveVieweriOSReleaseSettings.xcconfig
@@ -1,7 +1,7 @@
 PRODUCT_BUNDLE_IDENTIFIER = io.dolby.ios-interactive-player
 
-DEVELOPMENT_TEAM = E4A6TDH44W
+DEVELOPMENT_TEAM = B5PH3RUUX8
 CODE_SIGN_STYLE = Manual
-CODE_SIGN_IDENTITY = iPhone Developer
+CODE_SIGN_IDENTITY = iPhone Distribution
 
-PROVISIONING_PROFILE_SPECIFIER = Dolby IO iOS RTS Viewer Development
+PROVISIONING_PROFILE_SPECIFIER = Dolby IO iOS Interactive Player App
