--- a/.github/workflows/cd_interactive_player.yml
+++ b/.github/workflows/cd_interactive_player.yml
@@ -8,6 +8,32 @@ on:
       - '*'
 
 jobs:
+  Build-And-Deploy-To-Firebase:
+    runs-on: macos-12
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1.126.0
+        with:
+          ruby-version: 3.1.2
+
+      - name: Build App and Upload to Firebase
+        env:
+          FIREBASE_APP_ID: ${{ secrets.IOS_INTERACTIVE_PLAYER_FIREBASE_APP_ID }}
+          TEMP_KEYCHAIN_NAME: ${{ secrets.IOS_TEMP_KEYCHAIN_NAME_ENTERPRISE }}
+          TEMP_KEYCHAIN_PASSWORD: ${{ secrets.IOS_TEMP_KEYCHAIN_PASSWORD_ENTERPRISE }}
+          CERTIFICATE_BASE64: ${{ secrets.IOS_P12_BASE64_ENTERPRISE }}
+          P12_PASSWORD: ${{ secrets.IOS_P12_PASSWORD_ENTERPRISE }}
+          PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_INTERACTIVE_PLAYER_PROVISIONING_PROFILE_BASE64_ENTERPRISE }}
+          EXPORT_OPTIONS_PLIST_BASE64: ${{ secrets.IOS_INTERACTIVE_PLAYER_EXPORT_OPTIONS_PLIST_BASE64_ENTERPRISE }}
+          GOOGLE_APPLICATION_CREDENTIALS_BASE64: ${{ secrets.IOS_INTERACTIVE_PLAYER_GOOGLE_APPLICATION_CREDENTIALS_BASE64 }}
+        run: |
+          gem install bundler
+          bundle install
+          bundle exec fastlane build_and_deploy_to_firebase --env interactive-player-ios-enterprise build_number:$GITHUB_RUN_NUMBER
+
   Build-And-Deploy-iOS-App-To-Appstore:
     runs-on: macos-12
     steps:
@@ -25,8 +51,8 @@ jobs:
           TEMP_KEYCHAIN_PASSWORD: ${{ secrets.IOS_TEMP_KEYCHAIN_PASSWORD_APPSTORE }}
           CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64_APPSTORE }}
           P12_PASSWORD: ${{ secrets.IOS_P12_PASSWORD_APPSTORE }}
-          PROVISIONING_PROFILE_BASE64: ${{ secrets.INTERACTIVE_PROVISIONING_PROFILE_BASE64_APPSTORE }}
-          EXPORT_OPTIONS_PLIST_BASE64: ${{ secrets.INTERACTIVE_PLAYER_EXPORT_OPTIONS_PLIST_BASE64_APPSTORE }}
+          PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_INTERACTIVE_PLAYER_PROFILE_BASE64_APPSTORE }}
+          EXPORT_OPTIONS_PLIST_BASE64: ${{ secrets.IOS_INTERACTIVE_PLAYER_EXPORT_OPTIONS_PLIST_BASE64_APPSTORE }}
           APPSTORE_CONNECT_KEY_ID: ${{ secrets.APPSTORE_CONNECT_KEY_ID }}
           APPSTORE_CONNECT_ISSUER_ID: ${{ secrets.APPSTORE_CONNECT_ISSUER_ID }}
           APPSTORE_CONNECT_KEY_CONTENT: ${{ secrets.APPSTORE_CONNECT_KEY_CONTENT }}
