--- a/Configuration/InteractiveVieweriOSDebugSettings.xcconfig
+++ b/Configuration/InteractiveVieweriOSDebugSettings.xcconfig
@@ -1,4 +1,4 @@
-PRODUCT_BUNDLE_IDENTIFIER = io.dolby.ios-interactive-player-staging
+PRODUCT_BUNDLE_IDENTIFIER = io.dolby.ios-interactive-player.development
 
 DEVELOPMENT_TEAM = E4A6TDH44W
 CODE_SIGN_STYLE = Manual
