--- a/fastlane/.env.interactive-player-ios-appstore
+++ b/fastlane/.env.interactive-player-ios-appstore
@@ -3,8 +3,9 @@ PLATFORM = ios
 
 GYM_CONFIGURATION = "Release"
 GYM_WORKSPACE = "RTSViewer.xcworkspace"
-GYM_SCHEME = "Interactive Player"
+GYM_SCHEME = "InteractivePlayer"
 GYM_OUTPUT_DIR = "Tmp/build/"
 GYM_BUILD_PATH = "Tmp/build/"
 GYM_DESTINATION = "generic/platform=iOS"
 GYM_EXPORT_METHOD = "app-store"
+GYM_XCCONFIG = "Configuration/InteractiveVieweriOSReleaseSettings.xcconfig"
