--- a/fastlane/.env.interactive-player-ios-enterprise
+++ b/fastlane/.env.interactive-player-ios-enterprise
@@ -1,14 +1,13 @@
 // .env.enterprise
 PLATFORM = ios
 
-GYM_CONFIGURATION = "Release"
+GYM_CONFIGURATION = "Staging"
 GYM_WORKSPACE = "RTSViewer.xcworkspace"
 GYM_SCHEME = "InteractivePlayer"
 GYM_OUTPUT_DIR = "Tmp/build/"
 GYM_BUILD_PATH = "Tmp/build/"
 GYM_DESTINATION = "generic/platform=iOS"
 GYM_EXPORT_METHOD = "enterprise"
-GYM_XCCONFIG = "Configuration/InteractiveVieweriOSFirebaseReleaseSettings.xcconfig"
 
 TMP_GOOGLE_APP_CREDENTIALS_PATH = "Tmp/GoogleAppCredentials/credentials.json"
 FIREBASE_TESTER_GROUPS = "internal"
