Specify the path for each CI/CD

--- a/.github/workflows/cd_interactive_player.yml
+++ b/.github/workflows/cd_interactive_player.yml
@@ -3,7 +3,9 @@ name: Interactive Player Build and Distribution
 on:
   push:
     branches:
-      - main
+      - 'main'
+    paths:
+      - 'interactive-player/**'
     tags:
       - '*'
 
