--- a/.github/workflows/cd_rts_viewer_ios.yml
+++ b/.github/workflows/cd_rts_viewer_ios.yml
@@ -3,7 +3,9 @@ name: RTS Viewer Build and Distribution
 on:
   push:
     branches:
-      - main
+      - 'main'
+    paths:
+      - 'rts-viewer-ios/**'
     tags:
       - '*'
 
