--- a/.github/workflows/ci_rts_viewer_tvos.yml
+++ b/.github/workflows/ci_rts_viewer_tvos.yml
@@ -3,7 +3,9 @@ name: Tests
 on:
   pull_request:
     branches:
-      - main
+      - 'main'
+    paths:
+      - 'rts-viewer-tvos/**'
 
 jobs:
   Run-UnitTests:
