--- a/interactive-player/Interactive Viewer/iOS/Info.plist
+++ b/interactive-player/Interactive Viewer/iOS/Info.plist
@@ -22,6 +22,8 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+    <key>CADisableMinimumFrameDurationOnPhone</key>
+    <true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
