Include debug symbols in both appstore and firebase builds

--- a/interactive-player/fastlane/.env.interactive-player-ios-enterprise
+++ b/interactive-player/fastlane/.env.interactive-player-ios-enterprise
@@ -8,6 +8,7 @@ GYM_OUTPUT_DIR = "Tmp/build/"
 GYM_BUILD_PATH = "Tmp/build/"
 GYM_DESTINATION = "generic/platform=iOS"
 GYM_EXPORT_METHOD = "enterprise"
+GYM_INCLUDE_SYMBOLS = true
 
 TMP_GOOGLE_APP_CREDENTIALS_PATH = "Tmp/GoogleAppCredentials/credentials.json"
 FIREBASE_TESTER_GROUPS = "internal"
