--- a/interactive-player/fastlane/.env.interactive-player-ios-appstore
+++ b/interactive-player/fastlane/.env.interactive-player-ios-appstore
@@ -8,3 +8,4 @@ GYM_OUTPUT_DIR = "Tmp/build/"
 GYM_BUILD_PATH = "Tmp/build/"
 GYM_DESTINATION = "generic/platform=iOS"
 GYM_EXPORT_METHOD = "app-store"
+GYM_INCLUDE_SYMBOLS = true
