App configurations and debug configurations UI

--- a/interactive-player/Interactive Viewer/iOS/Info.plist
+++ b/interactive-player/Interactive Viewer/iOS/Info.plist
@@ -51,6 +51,10 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+    <key>LSSupportsOpeningDocumentsInPlace</key>
+    <true/>
 	<key>UILaunchScreen</key>
 	<dict/>
 	<key>UILaunchStoryboardName</key>
