--- a/.github/workflows/cd_interactive_player.yml
+++ b/.github/workflows/cd_interactive_player.yml
@@ -8,6 +8,7 @@ on:
       - 'interactive-player/**'
     tags:
       - '*'
+  workflow_dispatch:
 
 jobs:
   Build-And-Deploy-To-Firebase:
@@ -52,7 +53,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Ruby
-        uses: ruby/setup-ruby@v1.126.0
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1.2
 
