--- a/rts-viewer-tvos/fastlane/.env.tvos-tests
+++ b/rts-viewer-tvos/fastlane/.env.tvos-tests
@@ -1,4 +1,4 @@
 # Use Delimiter -> `, ` to specify an array
-TEST_SCHEMES = "RTSViewerTVOSTests, RTSCore"
+TEST_SCHEMES = "RTSViewerTVOSTests"
 
 TEST_DEVICE = "Apple TV 4K (3rd generation)"
