--- a/rts-viewer-ios/.gitignore
+++ b/rts-viewer-ios/.gitignore
@@ -1,7 +1,9 @@
 # Xcode
 #
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignor
+
 .DS_Store
+**/.DS_Store
 
 ## User settings
 xcuserdata/
