--- a/rts-viewer-tvos/.gitignore
+++ b/rts-viewer-tvos/.gitignore
@@ -1,7 +1,9 @@
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
 .DS_Store
+**/.DS_Store
 
 ## User settings
 xcuserdata/
