--- a/rts-viewer-ios/.gitignore
+++ b/rts-viewer-ios/.gitignore
@@ -1,6 +1,6 @@
 # Xcode
 #
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignor
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 .DS_Store
 
 ## User settings
